fixed spacing in weather section on home page, reorganized stock section

--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -5,5 +5,5 @@
 
 #RightHomeColumn {
     float: right;
-    width: 1100px;
+    width: 1000px;
 }
