--- a/src/assets/css/Weather.css
+++ b/src/assets/css/Weather.css
@@ -2,6 +2,10 @@
     margin-top: 30px;
 }
 
+.WeatherContainer {
+    margin-top: 30px;
+}
+
 #WeatherTable {
     margin-left: auto;
     margin-right: auto;
